--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "@typescript-eslint/parser": "^5.39.0",
     "eslint": "^8.25.0",
     "eslint-plugin-prettier": "^4.2.1",
+    "konva": "^8.3.14",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-konva": "^18.2.3",
     "react-scripts": "5.0.1",
     "typescript": "^4.8.4",
     "uuid": "^9.0.0",
